mobile/scss/modules/profile.scss
.profile-visual{
  position: absolute;
  left: 10px;
  right: 10px;
  top: 65px;
  height: 114px;
  text-align: center;
  z-index: 2;

  .photo{
    display: inline-block;
    vertical-align: top;
    width: 124px;
    height: 124px;
    background: #333 url('../img/bg-profile-default.jpg') 50% no-repeat;
    -webkit-background-size: 120px 120px;
    background-size: 120px 120px;
    border: 2px solid #8C8B8B;
    text-align: center;
    @include rounded-corner(100%);

    img{
      @include rounded-corner(100%);
      width: 100%;
      vertical-align: top;
    }
  }

  .contacts-amount{
    position: absolute;
    left: 0;
    bottom: 5px;
    padding-bottom: 15px;
    color: #fff;

    // &:after{
    //   content: 'Friends';
    //   position: absolute;
    //   bottom: 0;
    //   left: -2px;
    //   font-size: 11px;
    //   right: -6px;
    //   text-align: center;
    //   margin-top: -1px;
    // }

    .badge{
      position: absolute;
      left: -5px;
      top: -4px;
      font-size: 10px;
      min-width: 0;
      padding: 3px 5px;
      line-height: 10px;
    }

    strong{
      vertical-align: middle;
    }
  }

  .handle{
    position: absolute;
    right: 0;
    bottom: 20px;
    line-height: 25px;
    color: #fff;
  }

  &.compact{
    position: static;
    left: auto;
    top:auto;
    right: auto;
    bottom: auto;
    height: auto;
    overflow: hidden;
    padding: 74px 20px 0;

    .photo{
      float: left;
      width: 60px;
      height: 60px;
      margin-right: 15px;
      -webkit-background-size: 60px 60px;
      background-size: 60px 60px;
    }
    .text{
      padding-top: 11px;
      overflow: hidden;
      text-align:left;

      strong,
      em{
        display: block;
        padding-bottom: 3px;
        color: #fff;
        font-size: 16px;
      }

      em{
        color: rgba(255,255,255,0.6);
        font-size: 12px;
      }

    }
  }

}

.profile-tabs{
  position: absolute;
  top: 0;
  left: 0;
  bottom: 69px;
  right: 0;
  z-index: 1;

    > .tab-nav{
      top: 0 !important;
      position: absolute;
      left: 0;
      right: 0;
      height: 69px;
      background: $ribbon-bg;
      text-transform: uppercase;
      padding: 0;
      color: $secondary-text-action;

      .tab-item{
        font-weight: bold;
        font-size: 13px;
        padding: 20px 0;
        line-height: 30px;
        color: #999;

        &.tab-item-active{
          color: $white;
        }
      }
    }
    .tab-content{
      padding-top: 70px;
      padding-bottom: 42px;
      background: #eee;

      .content-button{
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        font-size: 14px;
        min-height: 44px;
        border-width: 1px 0 0;

        .ico{
          margin-right: 10px;
          vertical-align: middle;
        }
      }
    }
}

.reviews-list{
  .item{
    margin-bottom: 2px;

    > .ico{
      float: left;
      margin-right: 15px;
    }

    .review{
      overflow: hidden;

      .top{
        padding: 5px 0;
        overflow: hidden;
        height: auto;

        .ratings{
          float: left;
          height: 12px;
          width: 72px;
          background: url('../img/bg-stars.png') 0 0 no-repeat;
          position: relative;

          &:after{
            content: '';
            position: absolute;
            left: 0;
            top: 0;
            height: 100%;
            width:0;
            background: url('../img/bg-stars.png') 0 100% no-repeat;
          }

          &[data-mark="1"]:after{width: 20%;}
          &[data-mark="2"]:after{width: 40%;}
          &[data-mark="3"]:after{width: 60%;}
          &[data-mark="4"]:after{width: 80%;}
          &[data-mark="5"]:after{width: 100%;}
        }

        .time{
          float: right;
        }
      }

      .title{
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        padding: 0 0 5px;
      }
      .message{
        margin: 0 0 5px;
        display: block;
        display: -webkit-box;
        overflow: hidden;
        white-space: normal;
        text-overflow: ellipsis;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 3;
      }
      .button-holder{
        overflow: hidden;

        button{
          float: right;
          padding: 0 25px;
          min-height: 26px;
        }
      }
    }
  }
}

.profile-list{
  height: 100%;

  .list{
    margin: 0 20px;
    padding-top: 20px;
  }

  .item{
    background: none;
    padding: 10px 0 15px;
    border: none;

    &.endorsements-row{
      padding-top: 0;
      line-height: 31px;
    }

    &.item-divider{
      padding: 0;
      height: 1px;
      margin-bottom: 15px;
      min-height: 0;
      background: #D2D2D2;
    }
    
    .item-label{
      font-weight: bold;
      color: $gradient-bottom;
    }

    .item-note{
      width: 40%;
      text-align: right;
      color: $content-body-text;
      white-space: normal;
      
      .logo > div {margin-right: 0;}
    }
  }
}

.experience-list{
  .center{
    text-align: center;
  }
  .item{
    background: none;
    padding: 10px 15px 9px;
    border-bottom: 1px solid #ddd;
    font-size: 11px;
    color: #666;

    strong,
    p,
    em{
      display: block;
      padding-bottom: 5px;
    }

    strong{
      text-transform: uppercase;
    }

    p{
      font-size: 11px;
      white-space: normal;
      text-overflow: initial;
    }
    em{
      i{
        margin-right: 5px;
        vertical-align: text-top;
      }
    }
  }
}

.endorsements-list{
  float: right;
  width: 50%;
  text-align: right;
  white-space: normal;

  li{
    width: 36px;
    padding: 0 0 5px 5px;
    display: inline-block;

    .ico{
      width: 31px;
      height: 31px;

      -webkit-background-size: (8994/6)+px (351)/6+px;
      background-size: (8994/6)+px (351)/6+px;

      &.ico-doubletraileractive{background-position: -239px 0;}
      &.ico-passengeractive{background-position: -(1867/2)+px -0;}
      &.ico-tankvehicleactive{background-position: -(2759/2)+px 0;}
      &.ico-hazardousmaterialsactive{background-position: -(731/2)+px 0;}
      &.ico-tankhazardousactive{background-position: -1317px 0;}
    }
  }
}

// edit screen
.edit-fields-list {
  .item {
    border-width: 0 0 1px;
    input {
      color: $content-body-text;
      ::-webkit-input-placeholder {
        color: #333;
      }
    }
    .holder{
      overflow: hidden;
    }
  }
}

//
//.edit-pane{
//  padding-bottom: 42px;
//}

.edit-profile-types{
  .top{
    overflow: hidden;
    padding-bottom: 5px;

    .input-label{
      display: block;
      float: left;
    }
    button{
      float: right;
      border-width: 1px;
    }
  }

  input{
    background: none;
  }

  .selected-trailers{
    white-space: normal;

    li{
      display: inline-block;
      padding-right: 4px;
      padding-left: 5px;
      border-right:  1px solid #ddd;

      &:first-child{
        padding-left: 0;
      }

      &:last-child{
        border: 0;
        padding-right: 0;
      }
    }
  }
}


.profile-activity{
  .title{
    display: block;
    font-size: 14px;
    line-height: 31px;
    font-weight: bold;
    color: #276b93;
    text-transform: uppercase;
    padding: 0 20px;
  }

  .no-feed-items{
    display: block;
    padding: 10px 20px 20px;
    font-size: 14px;
  }
}

